OldArchive/3fafeac1361630b8c9c13b9345a8f560-b9c56c160433c6ec12c50b91c3cb852e/output
+ g++ -std=c++1y -O3 -Wall -Wextra -Woverloaded-virtual -pedantic-errors -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:10: error: use of deleted function ‘void f(double)’
     f(1.0);
          ^
main.cpp:1:6: error: declared here
 void f(double) = delete;
      ^
